name:                JsonH
version:             0.1.0.0
description:         Haskell JSON parser and emitter
homepage:            https://github.com/duangsuse/JsonH
license:             PublicDomain
author:              duangsuse
maintainer:          fedora-opensuse@outlook.com
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable JsonH
  main-is:             Main.hs
  other-modules:       SimpleParserc JsonHaskell
  build-depends:       base >=4.10 && <4.11, containers >=0.5 && <0.6
  default-language:    Haskell2010
